output_10.1.168/gamma.cuh.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/gamma.cuh-c3bc22.hip:8:33: error: unknown type name 'QudaGammaBasis'
  template <typename ValueType, QudaGammaBasis basis, int dir>
                                ^
/tmp/gamma.cuh-c3bc22.hip:29:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-c3bc22.hip:100:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-c3bc22.hip:152:27: error: use of undeclared identifier 'QUDA_UKQCD_GAMMA_BASIS'
      } else if (basis == QUDA_UKQCD_GAMMA_BASIS) {
                          ^
/tmp/gamma.cuh-c3bc22.hip:223:20: error: use of undeclared identifier 'QUDA_DEGRAND_ROSSI_GAMMA_BASIS'
      if (basis == QUDA_DEGRAND_ROSSI_GAMMA_BASIS) {
                   ^
/tmp/gamma.cuh-c3bc22.hip:255:27: error: use of undeclared identifier 'QUDA_UKQCD_GAMMA_BASIS'
      } else if (basis == QUDA_UKQCD_GAMMA_BASIS) {
                          ^
7 errors generated when compiling for host.
Error while processing /tmp/gamma.cuh-c3bc22.hip.

[HIPIFY] info: file './quda/include/gamma.cuh' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 5570
  CHANGED lines of code: 1
  TOTAL lines of code: 295
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 0
  TIME ELAPSED s: 0.55
